Test: RoomController 테스트 커버리지 100% 만족하도록 테스트 코드 추가 및 기존 코드 수정